--- a/index.html
+++ b/index.html
@@ -1,76 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+
   <title>Product List with cart</title>
-   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
 </head>
+
 <body class=" bg-rose-50 flex flex-col gap-7 sm:flex-row ">
   <main class="sm:w-[70%] lg:p-20 p-5 sm:px-5">
-    <h1 class="text-[3rem] font-bold mb-5">Desserts</h1> 
+    <h1 class="text-[3rem] font-bold mb-5">Desserts</h1>
     <section class="flex flex-col items-center gap-7 sm:grid sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-3" id="display">
 
     </section>
   </main>
-  <aside class="flex-1 pt-5 lg:pt-25 sm:px-5">
-    <div class=" flex flex-col gap-3 bg-white p-5 rounded-xl" >
-      <h2 class="text-rose-800 text-[2rem] font-bold" >Your Cart (<span id="cartquantity"></span>)</h2>
+  <aside class="flex-1 pt-5 lg:pt-25 sm:px-5 ">
+    <div class=" flex flex-col gap-3 bg-white p-5 rounded-xl">
+      <h2 class="text-rose-800 text-[2rem] font-bold">Your Cart (<span id="cartquantity">0</span>)</h2>
       <div id="cart-display">
-      
-    </div>
-    <div  class='flex justify-between w-full items-center'>
-      <p class="font-semibold">Order Total</p>
-      <span id="total" class=" text-[#463f3a] font-bold text-[1.6rem]">48.90</span>
-    </div>
-    
-    <div>
 
+      </div>
+      <div class='flex justify-between w-full items-center'>
+        <p class="font-semibold">Order Total</p>
+        <span id="total" class=" text-[#463f3a] font-bold text-[1.6rem]"></span>
+      </div>
+      <button class="bg-[#b8370d] text-[#ffb797] p-3 rounded-[30px] font-bold text-[1.2rem] cursor-pointer"
+        id="confirm">Confirm Button</button>
     </div>
-    <button class="bg-[#b8370d] text-[#ffb797] p-3 rounded-[30px] font-bold text-[1.2rem] cursor-pointer" id="confirm">Confirm Button</button>
   </aside>
 
-  <section class=" absolute min-h-[100vh] w-[100%] hidden bg-black/70" id="orderConfirmationSection">
-    <div class="absolute top-[20%] left-[35%] bg-white w-[500px] h-fit p-[30px] rounded-[15px]">
-      <img src="./assets/images/icon-order-confirmed.svg" alt="icon-order-confirmed">
-      <h2 class="font-bold text-[2rem]">Order Confirmed</h2>
-      <p class="text-[#b1a6a4]">We hope you enjoy your food!</p>
+  <aside class="flex-1 pt-5 lg:pt-25 sm:px-5 hidden">
+    <div class=" flex flex-col gap-3 bg-white p-5 rounded-xl ">
+      <h2 class="text-rose-800 text-[2rem] font-bold text-left">Your Cart (<span id="cartquantity">0</span>)</h2>
+      <div id="cart-display" class="flex flex-col items-center w-full">
+        <img src="./assets/images/illustration-empty-cart.svg" class="" alt="empty cart">
+        <p class="text-[#988b99] font-bold">Your added items-appear here</p>
+      </div>
+    </div>
+  </aside>
 
-      <div class="bg-[#fcf8f5] p-[20px] rounded-[15px] my-[30px] " >
+
+  <section class="fixed inset-0 min-h-screen w-full hidden bg-black/70 z-50" id="orderConfirmationSection">
+    <div
+      class="absolute top-1/4 left-1/2 transform -translate-x-1/2 bg-white w-11/12 sm:w-[500px] p-6 sm:p-8 rounded-2xl">
+      <img src="./assets/images/icon-order-confirmed.svg" alt="icon-order-confirmed" class="mx-auto mb-4">
+      <h2 class="font-bold text-2xl sm:text-3xl text-center mb-2">Order Confirmed</h2>
+      <p class="text-center text-[#b1a6a4] mb-6">We hope you enjoy your food!</p>
+
+      <div class="bg-[#fcf8f5] p-4 sm:p-6 rounded-2xl mb-6">
         <div id="confirmationContainer">
-          <!-- <div id="orderConfirmation" class="flex justify-between items-center  border-b-[1px] pb-[15px] border-[#c83b0e]/5 mb-[30px]">
-
-            <div class="flex gap-[20px]">
-              <div class="w-[60px]">
-                <img src="./assets/images/image-baklava-thumbnail.jpg" alt="image-baklava-thumbnail">
-              </div>
-              <div class="flex flex-col justify-between">
-                <p class="font-bold text-[#1f1108]">Classic Tiramusu</p>
-                <div class="flex gap-[15px]">
-                  <p class="text-[#c63b0e] font-bold">1x</p>
-                  <p class="text-[#a09594] font-medium">@ #5.50</p>
-                </div>
-              </div>
-            </div>
-
-            <p class="text-[#1f1108] font-bold text-[1.1rem]">#5.50</p>
-          </div> -->
+          <!-- Dynamic Order Items will go here -->
         </div>
-        <div class="flex justify-between  items-center">
-          <p>Order Total</p>
-          <p class="font-bold text-[1.5rem] text-[#1f1108]"><span id="confirmationTotal"></span></p>
+        <div class="flex justify-between items-center mt-4">
+          <p class="font-medium">Order Total</p>
+          <p class="font-bold text-xl sm:text-2xl text-[#1f1108]"><span id="confirmationTotal"></span></p>
         </div>
       </div>
-      <button class="cursor-pointer w-full bg-[#c63b0e] text-white rounded-[30px] p-[10px]" id="startNewOrder">Start New Order</button>
+
+      <button class="cursor-pointer w-full bg-[#c63b0e] text-white rounded-full p-3 sm:p-4 text-lg sm:text-xl"
+        id="startNewOrder">
+        Start New Order
+      </button>
     </div>
   </section>
 
@@ -81,4 +88,5 @@
   </div> -->
   <script type="module" src="./index.js"></script>
 </body>
+
 </html>
